TieDivLibrary: improvements (fixed IE z-index issue with spotlights, CSS classes for ads/spotlights)

--- a/wikia/branches/MW_AdEngine/skins/monaco/css/root.css
+++ b/wikia/branches/MW_AdEngine/skins/monaco/css/root.css
@@ -129,3 +129,13 @@ body.mainpage .HOME_TOP_RIGHT_BOXAD, body.mainpage .FAST_HOME2 {
 	background: #F00;
 	margin: 0 auto;
 }
+
+/* general ads styling */
+.wikia_spotlight,
+.wikia_ad {
+	position: absolute;
+}
+
+.wikia_ad {
+	z-index: 15;
+}
